<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".menu.Settelment">

    <LinearLayout
        android:id="@+id/LaySearch"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:textSize="15dp"
            android:drawableLeft="@drawable/ic_search"
            android:background="@drawable/menu_search"
            android:padding="10dp"/>

    </LinearLayout>

    <ScrollView
        android:id="@+id/layList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/LaybtnSettle"
        android:layout_below="@+id/LaySearch">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/listSettelment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingRight="15dp" />


        </LinearLayout>

    </ScrollView>
    <LinearLayout
        android:id="@+id/buktiTransaksi"
        android:visibility="invisible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgBank"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="-30dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_logo_bca" />

            <TextView
                android:id="@+id/txtMerchant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-20dp"
                android:gravity="center"
                android:text="@string/merchant"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtAlamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingLeft="36dp"
                android:paddingRight="36dp"
                android:text="@string/alamat"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/settlement"
                android:textColor="@color/black"
                android:textSize="25dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/merchantID"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terminalID"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Date"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtIDMerchant"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12345"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtIDTerminal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12345"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="12345"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sBatch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BATCH"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/transaction"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/sale"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/count"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtCountSale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12345"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amounts"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/txtAmountSale"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="12345"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
            <ImageView
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:src="@drawable/dotted"
                android:layerType="software" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:padding="10dp"
        android:id="@+id/LaybtnSettle"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_marginBottom="5dp"
            android:id="@+id/btnSettle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="SETTLEMENT"
            android:textColor="@color/white"
            android:background="@drawable/button_custom"/>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@+id/LaySearch"
        android:visibility="gone"
        android:id="@+id/alert"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        tools:ignore="NotSibling">
        <ImageView
            android:id="@+id/imgAlert"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:src="@drawable/no_data"/>

        <TextView
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="#000"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tidak Ada Data Transaksi"/>



    </LinearLayout>



</RelativeLayout>